# libvermeer

./: CMakeLists.txt  README.md  cmake_install.cmake  invoke_cmake.sh
assets/: lewitt_test.wgsl  line.wgsl  pnc.wgsl  pncuvtb.wgsl  ray-shader.wgsl
ext/glfw/: CMakeLists.txt  Makefile  cmake_install.cmake
ext/glfw/src/: Makefile  cmake_install.cmake
ext/glfw3webgpu/: Makefile  cmake_install.cmake
ext/imgui/: Makefile  cmake_install.cmake
ext/webgpu-native/: Makefile  cmake_install.cmake
ext/webgpu-native/include/webgpu/: webgpu.hpp
include/: glfw_runner.hpp  save_texture.h  stb_image_write.h  webgpu-release.h  webgpu_utils.h
include/lewitt/: application.h  bindings.hpp  buffer_flags.h  buffer_ops.hpp  buffers.hpp  camera.hpp  color.h  common.h  doables.hpp  draw_primitives.hpp  geometry_logger.h  passes.hpp  resources.hpp  scene.hpp  shaders.hpp  uniforms.hpp  vertex_formats.hpp
include/mondrian/: aabb.hpp  glm_typedefs.h
projects/aabb_test/: Application.cpp  Makefile  cmake_install.cmake
projects/app_test/: CMakeLists.txt  Makefile  main.cpp
projects/hello_webgpu_compute/: Application.cpp  Application.h  CMakeLists.txt  Makefile  cmake_install.cmake
projects/hello_webgpu_render/: Application.cpp  Makefile  cmake_install.cmake
projects/hello_world/: CMakeLists.txt  main.cpp
projects/lewitt/: Application.bak.cpp  Application.cpp  Application.h  CMakeLists.txt  ResourceManager.cpp  ResourceManager.h  bindings.hpp  buffer_flags.h  buffers.hpp  cmake_install.cmake  common.h  doables.hpp  geometry_buffers.hpp  main.cpp  shaders.hpp  uniforms.hpp  vertex_formats.hpp
src/lewitt/: application.cpp  geometry_logger.cpp
